--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
 :root {
   --color-font: #1a1a1a;
   --color-white: #fff;
-  --gradient-jacket: linear-gradient(to right, #f4f4f4, #fff);
   --border-width-sp: 2px;
   --border-width-pc: 3px;
 }
@@ -89,7 +88,7 @@ body.is-playing .jacket__play:after {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  background: var(--gradient-jacket);
+  background-color: var(--color-white);
   border: var(--border-width-sp) solid var(--color-font);
   border-radius: 1.2rem;
   will-change: transform;
