--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@ body.is-playing .jacket__play:after {
   text-decoration: none;
 }
 
-@ media screen and (min-width: 769px) {
+@ media screen and (max-width: 768px) {
   .jacket {
     top: 0;
     right: 0;
