ジャケットやめる

--- a/src/index.html
+++ b/src/index.html
@@ -79,36 +79,23 @@ body.is-playing .jacket__play:after {
 }
 
 .jacket {
-  width: 18rem;
-  height: 18rem;  
   position: absolute;
+  bottom: 2rem;
+  right: 2rem;
   z-index: 1;
-  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  background-color: var(--color-white);
-  border: var(--border-width-sp) solid var(--color-font);
-  border-radius: 1.2rem;
-  will-change: transform;
-}
-.jacket__body {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  flex-grow: 1;
-  overflow: hidden;
+  align-items: center;
 }
 .jacket__logo {
   width: 6rem;
-  margin: 0 -0.2rem -0.2rem 0;
   height: auto;
   fill: var(--color-font);
 }
 .jacket__play {
-  width: 6.4rem;
-  height: 6.4rem;
+  width: 4.4rem;
+  height: 4.4rem;
   position: relative;
-  margin: 0 0 3.5rem 2.9rem;
+  margin: 0 1.4rem 0 0;
   padding: 0;
   border: 0;
   border-radius: 50%;
@@ -123,16 +110,16 @@ body.is-playing .jacket__play:after {
   height: 0;
   position: absolute;
   top: 29%;
-  left: 32%;
+  left: 33%;
   border-style: solid;
-  border-width: 0 16px 28px 16px;
+  border-width: 0 11px 19px 11px;
   border-color: transparent transparent var(--color-white) transparent;
   transform: rotate(90deg);
 }
 .jacket__play:after {
   content: "";
-  width: 0.8rem;
-  height: 2.8rem;
+  width: 0.5rem;
+  height: 2.1rem;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -140,8 +127,8 @@ body.is-playing .jacket__play:after {
   bottom: 0;
   left: 0;
   margin: auto;
-  border-left: 0.8rem solid var(--color-white);
-  border-right: 0.8rem solid var(--color-white);
+  border-left: 0.6rem solid var(--color-white);
+  border-right: 0.6rem solid var(--color-white);
   box-sizing: content-box;
 }
 
@@ -172,50 +159,32 @@ body.is-playing .jacket__play:after {
   text-decoration: none;
 }
 
-@media screen and (max-width: 768px) {
-  .jacket {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-  }
-}
-
 @media screen and (min-width: 769px) {
   html {
     font-size: 16px;
-  }
-  .jacket {
-    width: 14rem;
-    height: 14rem;
-    right: 2rem;
-    bottom: 2rem;
-    border-width: var(--border-width-pc);
   }
   .jacket__logo {
     width: 4.2rem;
   }
   .jacket__play {
-    width: 4.8rem;
-    height: 4.8rem;
-    margin: 0 0 2.3rem 2.4rem;
-    border-width: var(--border-width-pc);
+    width: 3.2rem;
+    height: 3.2rem;
+    margin: 0 1rem 0 0;
   }
   .jacket__play:before {
-    top: 28%;
-    left: 32%;
-    border-width: 0 20px 35px 20px;
+    top: 31%;
+    left: 34%;
+    border-width: 0 12px 21px 12px;
   }
   .jacket__play:after {
-    width: 0.6rem;
-    height: 2.3rem;
-    border-left-width: 0.7rem;
-    border-right-width: 0.7rem;
+    width: 0.3rem;
+    height: 1.5rem;
+    border-left-width: 0.4rem;
+    border-right-width: 0.4rem;
   }
   .poem__item {
-    font-size: calc(100vh / (6 * 2.6));
-    line-height: 2.4;
+    font-size: calc(100vh / (6 * 2.8));
+    line-height: 2;
     letter-spacing: 0.25em;
   }
 }
@@ -240,10 +209,10 @@ body.is-playing .jacket__play:after {
 </head>
 <body>
   <div class="jacket">
-    <div class="jacket__body">
-      <button type="button" class="jacket__play" aria-label="音楽を再生する"></button>
-      <svg xmlns="http://www.w3.org/2000/svg" width="33" height="75" viewBox="0 0 33 75" class="jacket__logo"><path d="M14.28,2.33A11.24,11.24,0,0,0,14.1.17h4.53a14.76,14.76,0,0,0-.18,2.16V4.64h9.69a17.24,17.24,0,0,0,2.15-.11V6.18c-.36,0-.5-.07-.68-.07l-.5,0H22L26.37,7.8l-.93,1a57.71,57.71,0,0,1-4.22,5L21,14h9a17.85,17.85,0,0,0,2.16-.1v1.65c-.36,0-.51-.07-.69-.07l-.5,0H2.79A14,14,0,0,0,1,15.54V13.89a13.32,13.32,0,0,0,2.15.1H9.09L9,12.81A39.5,39.5,0,0,0,7.8,7.69l-.43-1,1.11-.62H4.67a14,14,0,0,0-1.8.11V4.53A12.18,12.18,0,0,0,5,4.64h9.25ZM27.24,18a15.92,15.92,0,0,0-.18,2.91V29A16.3,16.3,0,0,0,27.24,32l-.94,0a17.44,17.44,0,0,0-1.76-.07H8.48l-.9,0a5,5,0,0,0-.65,0c-.64,0-.68,0-1,0A16.78,16.78,0,0,0,6.11,29V20.9A16.59,16.59,0,0,0,5.93,18c1.08.07,1.94.11,2.7.11H24.54A16.19,16.19,0,0,0,26.19,18L27,18ZM9.31,6.83a37,37,0,0,1,3.45,4.25l.91,1L9.67,14h9.39A56.5,56.5,0,0,0,21.4,7.48l.22-1.41H8.73Zm.9,12.71V24H23V19.54Zm0,5.9v5H23v-5Z"/><path d="M9.35,53.58l-.76.72a31.77,31.77,0,0,1-5.11,5l-.83.72L.13,56.39l1.12-.29A38.52,38.52,0,0,0,7.65,53l.72-.57Zm11.48-7.41a19.37,19.37,0,0,0,2.7-.11,15.76,15.76,0,0,0-.18,2.88v7.23a15.76,15.76,0,0,0,.18,2.88A21.12,21.12,0,0,0,21.4,59H18.52v3.27H30.08a15.21,15.21,0,0,0,2.16-.14v1.73a14.91,14.91,0,0,0-2.16-.15H19.6a27.79,27.79,0,0,0,11.31,5.76l1.72.29-2.77,4.21-1.26-.76a28.28,28.28,0,0,1-10.08-8.45v7.66a15.5,15.5,0,0,0,.18,2.16H14.24l0-.36a11,11,0,0,0,.14-1.8V66.43A31.76,31.76,0,0,1,2,73.85l-1.18.47L.24,73.13l1.26-.47a28.84,28.84,0,0,0,10.08-9H2.79c-.75,0-.82,0-1.87.15V62.08a15.21,15.21,0,0,0,2.16.14H14.42V59H11.94c-.94,0-1.26,0-2.23.1a16.15,16.15,0,0,0,.18-2.88V48.94a13.28,13.28,0,0,0-.18-2.88,24.84,24.84,0,0,0,2.7.11H14a23.48,23.48,0,0,0,.83-3.28l.1-1.11,5,.9-1,.79c-.79.83-1.91,1.91-2.81,2.7Zm-18-.94a49.73,49.73,0,0,1,5.08,2.63l.9.43-3.32,3.6-.5-1a33.92,33.92,0,0,0-3.35-4.5l-.72-.68,1-1.05Zm10.73,2.38v4.1h6.12v-4.1Zm0,5.54v4.36h6.12V53.15Zm19.26-5.43-1,.46a29.22,29.22,0,0,1-6,2.77l-.83.44-.86-1.23.75-.54a27.06,27.06,0,0,0,3.85-4.32l.51-.93ZM25.8,53a45.22,45.22,0,0,1,5.94,2.84l1.08.4-3,3.74-.57-.86a46.83,46.83,0,0,0-4.21-4.75l-.87-.72L25,52.54Z"/></svg>
-    </div>
+    <button type="button" class="jacket__play" aria-label="音楽を再生する"></button>
+    <svg xmlns="http://www.w3.org/2000/svg" width="75" height="33" viewBox="0 0 75 33">
+      <path d="M14.3 2.7c0-.7-.1-1.4-.2-2.2h4.5c-.1.7-.2 1.4-.2 2.2V5h9.7c.7 0 1.4 0 2.1-.1v1.7c-.4 0-.5-.1-.7-.1h-7.6l4.4 1.7-.9 1c-1.3 1.7-2.7 3.4-4.2 5l-.2.2h9c.7 0 1.4 0 2.2-.1V16c-.4 0-.5-.1-.7-.1H2.8c-.6 0-1.2 0-1.8.1v-1.6c.7.1 1.4.1 2.2.1h5.9L9 13.3c-.3-1.7-.7-3.4-1.2-5.1l-.4-1 1.1-.6H4.7c-.6 0-1.2 0-1.8.1V4.9c.7.1 1.4.2 2.2.2h9.2V2.7zm13 15.7c-.1 1-.2 1.9-.2 2.9v8.1c0 1 0 2 .2 3h-.9c-.6-.1-1.2-.1-1.8-.1H5.9c.1-1 .2-1.9.2-2.9v-8.1c0-1 0-1.9-.2-2.9 1.1.1 1.9.1 2.7.1h15.9c.6 0 1.1 0 1.6-.1H27.3zM9.4 7.2c1.3 1.3 2.4 2.8 3.4 4.2l.9 1-4 1.9h9.4c.9-2.1 1.7-4.3 2.3-6.5l.2-1.4H8.8l.6.8zm.9 12.8v4.5h12.8V20H10.3zm0 5.9v5h12.8v-5H10.3zM50.4 11.9l-.8.7c-1.5 1.9-3.2 3.5-5.1 5l-.8.7-2.5-3.6 1.1-.3c2.2-.8 4.4-1.9 6.4-3.1l.7-.6 1 1.2zm11.5-7.4c.9 0 1.8 0 2.7-.1-.1 1-.2 1.9-.2 2.9v7.2c0 1 0 1.9.2 2.9-.7-.1-1.4-.1-2.1-.1h-2.9v3.3h11.6c.7 0 1.4 0 2.2-.1v1.7c-.7-.1-1.4-.2-2.2-.2H60.6c3.3 2.8 7.1 4.7 11.3 5.8l1.7.3-2.8 4.2-1.3-.8c-4-2-7.4-4.9-10.1-8.4v7.7c0 .7.1 1.4.2 2.2h-4.5v-.4c.1-.6.1-1.2.1-1.8v-6c-3.5 3.4-7.7 5.9-12.4 7.4l-1.2.5-.6-1.2 1.3-.5c4-2.2 7.5-5.2 10.1-9h-8.8c-.8 0-.8 0-1.9.2v-1.7c.7.1 1.4.1 2.2.1h11.3v-3.2H53c-.9 0-1.3 0-2.2.1.1-1 .2-1.9.2-2.9V7.3c0-1 0-1.9-.2-2.9.9.1 1.8.1 2.7.1H55c.4-1.1.6-2.2.8-3.3L56 .1l5 .9-1 .8c-.8.8-1.9 1.9-2.8 2.7h4.7zm-18-.9c1.7.8 3.4 1.7 5.1 2.6l.9.4-3.3 3.6-.5-1c-1-1.6-2.1-3.1-3.3-4.5L42 4l1-1 .9.6zm10.7 2.3V10h6.1V5.9h-6.1zm0 5.6v4.4h6.1v-4.4h-6.1zM73.9 6l-1 .5c-1.9 1.1-3.9 2.1-6 2.8l-.9.4-.9-1.2.8-.5c1.4-1.3 2.7-2.7 3.8-4.3l.5-.9L73.9 6zm-7.1 5.3c2 .8 4 1.8 5.9 2.8l1.1.4-3 3.7-.6-.9a48.1 48.1 0 00-4.2-4.8l-.8-.5.8-1.1.8.4z"/>
+    </svg>
   </div>
   <div class="poem">
     <div class="poem__inner">
