--- a/src/index.html
+++ b/src/index.html
@@ -76,32 +76,75 @@ body.is-playing .jacket__play:after {
 .jacket {
   width: 100%;
   position: absolute;
-  top: calc(50% - 12.6vh);
+  bottom: 6vh;
   right: 0;
-  padding: 3vh;
   z-index: 1;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 20%, white 80%, rgba(255, 255, 255, 0));
+  justify-content: center;
+  transform: translateY(-37vh);
+  animation: move-jacket-sp 2s 0.5s cubic-bezier(0.65, 0, 0.35, 1) forwards;
+}
+@keyframes move-jacket-sp {
+  0% {
+    transform: translateY(-37vh);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes move-jacket-pc {
+  0% {
+    transform: translateY(-43vh);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 .jacket__logo {
-  width: 13vh;
+  width: 40vh;
   height: auto;
   fill: var(--color-font);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: fadeout-logo 1.2s 1s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+@keyframes fadeout-logo {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    filter: blur(20px);
+  }
 }
 .jacket__play {
-  width: 7.4vh;
-  height: 7.4vh;
-  position: relative;
-  margin: 0 2vh 0 0;
+  width: 10vh;
+  height: 10vh;
   padding: 0;
   border: 0;
+  position: relative;
+  z-index: 1;
   border-radius: 50%;
+  opacity: 0;
   background: var(--color-font);
   outline: none;
   -webkit-appearance: none;
   cursor: pointer;
+  animation: fadein-play 1.2s 1.6s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+}
+@keyframes fadein-play {
+  0% {
+    opacity: 0;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 .jacket__play:before {
   content: "";
@@ -109,16 +152,16 @@ body.is-playing .jacket__play:after {
   height: 0;
   position: absolute;
   top: 30%;
-  left: 35%;
+  left: 34%;
   border-style: solid;
-  border-width: 0 1.8vh 3.2vh 1.8vh;
+  border-width: 0 2.3vh 4vh 2.3vh;
   border-color: transparent transparent var(--color-white) transparent;
   transform: rotate(90deg);
 }
 .jacket__play:after {
   content: "";
-  width: 0.7vh;
-  height: 3.2vh;
+  width: 0.9vh;
+  height: 3.8vh;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -126,17 +169,17 @@ body.is-playing .jacket__play:after {
   bottom: 0;
   left: 0;
   margin: auto;
-  border-left: 1vh solid var(--color-white);
-  border-right: 1vh solid var(--color-white);
+  border-left: 1.2vh solid var(--color-white);
+  border-right: 1.2vh solid var(--color-white);
   box-sizing: content-box;
 }
 
 .poem {
   overflow: hidden;
+  padding-bottom: 12vh;
 }
 .poem__inner {
   display: inline-block;
-  transition: transform 3s cubic-bezier(0.33, 1, 0.68, 1);
 }
 .poem__list {
   display: inline-flex;
@@ -147,9 +190,9 @@ body.is-playing .jacket__play:after {
 }
 .poem__item {
   padding: 0 0.2em;
-  font-size: calc(100vh / (6 * 3.4));
+  font-size: calc(100vh / (6 * 3.5));
   letter-spacing: 0.18em;
-  line-height: 2.3;
+  line-height: 2.2;
 }
 .poem__link,
 .poem__link:hover,
@@ -163,11 +206,11 @@ body.is-playing .jacket__play:after {
     font-size: 16px;
   }
   .jacket {
-    top: calc(50% - 14.8vh);
-    padding: 3vh 7vh;
+    transform: translateY(-43vh);
+    animation-name: move-jacket-pc;
   }
   .poem__item {
-    font-size: calc(100vh / (6 * 2.4));
+    font-size: calc(100vh / (6 * 2.8));
     line-height: 2.2;
     letter-spacing: 0.25em;
   }
@@ -193,7 +236,7 @@ body.is-playing .jacket__play:after {
 </head>
 <body>
   <div class="jacket">
-    <button type="button" class="jacket__play" aria-label="音楽を再生する"></button>
+    <button type="button" class="jacket__play" aria-label="モルダウを再生する"></button>
     <svg xmlns="http://www.w3.org/2000/svg" width="75" height="33" viewBox="0 0 75 33" class="jacket__logo">
       <path d="M14.3 2.7c0-.7-.1-1.4-.2-2.2h4.5c-.1.7-.2 1.4-.2 2.2V5h9.7c.7 0 1.4 0 2.1-.1v1.7c-.4 0-.5-.1-.7-.1h-7.6l4.4 1.7-.9 1c-1.3 1.7-2.7 3.4-4.2 5l-.2.2h9c.7 0 1.4 0 2.2-.1V16c-.4 0-.5-.1-.7-.1H2.8c-.6 0-1.2 0-1.8.1v-1.6c.7.1 1.4.1 2.2.1h5.9L9 13.3c-.3-1.7-.7-3.4-1.2-5.1l-.4-1 1.1-.6H4.7c-.6 0-1.2 0-1.8.1V4.9c.7.1 1.4.2 2.2.2h9.2V2.7zm13 15.7c-.1 1-.2 1.9-.2 2.9v8.1c0 1 0 2 .2 3h-.9c-.6-.1-1.2-.1-1.8-.1H5.9c.1-1 .2-1.9.2-2.9v-8.1c0-1 0-1.9-.2-2.9 1.1.1 1.9.1 2.7.1h15.9c.6 0 1.1 0 1.6-.1H27.3zM9.4 7.2c1.3 1.3 2.4 2.8 3.4 4.2l.9 1-4 1.9h9.4c.9-2.1 1.7-4.3 2.3-6.5l.2-1.4H8.8l.6.8zm.9 12.8v4.5h12.8V20H10.3zm0 5.9v5h12.8v-5H10.3zM50.4 11.9l-.8.7c-1.5 1.9-3.2 3.5-5.1 5l-.8.7-2.5-3.6 1.1-.3c2.2-.8 4.4-1.9 6.4-3.1l.7-.6 1 1.2zm11.5-7.4c.9 0 1.8 0 2.7-.1-.1 1-.2 1.9-.2 2.9v7.2c0 1 0 1.9.2 2.9-.7-.1-1.4-.1-2.1-.1h-2.9v3.3h11.6c.7 0 1.4 0 2.2-.1v1.7c-.7-.1-1.4-.2-2.2-.2H60.6c3.3 2.8 7.1 4.7 11.3 5.8l1.7.3-2.8 4.2-1.3-.8c-4-2-7.4-4.9-10.1-8.4v7.7c0 .7.1 1.4.2 2.2h-4.5v-.4c.1-.6.1-1.2.1-1.8v-6c-3.5 3.4-7.7 5.9-12.4 7.4l-1.2.5-.6-1.2 1.3-.5c4-2.2 7.5-5.2 10.1-9h-8.8c-.8 0-.8 0-1.9.2v-1.7c.7.1 1.4.1 2.2.1h11.3v-3.2H53c-.9 0-1.3 0-2.2.1.1-1 .2-1.9.2-2.9V7.3c0-1 0-1.9-.2-2.9.9.1 1.8.1 2.7.1H55c.4-1.1.6-2.2.8-3.3L56 .1l5 .9-1 .8c-.8.8-1.9 1.9-2.8 2.7h4.7zm-18-.9c1.7.8 3.4 1.7 5.1 2.6l.9.4-3.3 3.6-.5-1c-1-1.6-2.1-3.1-3.3-4.5L42 4l1-1 .9.6zm10.7 2.3V10h6.1V5.9h-6.1zm0 5.6v4.4h6.1v-4.4h-6.1zM73.9 6l-1 .5c-1.9 1.1-3.9 2.1-6 2.8l-.9.4-.9-1.2.8-.5c1.4-1.3 2.7-2.7 3.8-4.3l.5-.9L73.9 6zm-7.1 5.3c2 .8 4 1.8 5.9 2.8l1.1.4-3 3.7-.6-.9a48.1 48.1 0 00-4.2-4.8l-.8-.5.8-1.1.8.4z"/>
     </svg>
@@ -275,66 +318,6 @@ body.is-playing .jacket__play:after {
     var jacket = document.querySelector('.jacket')
     var visibleClass = 'is-visible'
     var playingClass = 'is-playing'
-    var grabClass = 'is-grab'
-    var grabbingClass = 'is-grabbing'
-    var isGrabbing = false
-    var prevX = 0
-    var prevY = 0
-    var translateX = 0
-    var translateY = 0
-
-    function render() {
-      jacket.style.transform = 'translate(' + 0 + 'px, ' + translateY + 'px)'
-
-      if (isGrabbing) {
-        requestAnimationFrame(render)
-      }
-    }
-
-    function mouseMoveHandler(e) {
-      handleMove(e.clientX, e.clientY)
-    }
-
-    function mouseUpHandler(e) {
-      handleEnd(e.clientX, e.clientY)
-      body.removeEventListener('mousemove', mouseMoveHandler)
-      body.removeEventListener('mouseup', mouseUpHandler)
-    }
-
-    function touchMoveHandler(e) {
-      handleMove(e.changedTouches[0].clientX, e.changedTouches[0].clientY)
-    }
-
-    function touchEndHandler(e) {
-      handleEnd(e.changedTouches[0].clientX, e.changedTouches[0].clientY)
-      body.removeEventListener('touchmove', touchMoveHandler)
-      body.removeEventListener('touchend', touchEndHandler)
-    }
-
-    function handleStart(x, y) {
-      isGrabbing = true
-      prevX = x
-      prevY = y
-      body.classList.add(grabbingClass)
-
-      render()
-    }
-
-    function handleMove(x, y) {
-      if (!isGrabbing) {
-        return
-      }
-
-      translateX += x - prevX
-      translateY += y - prevY
-      prevX = x
-      prevY = y
-    }
-
-    function handleEnd(x, y) {
-      isGrabbing = false
-      body.classList.remove(grabbingClass)
-    }
 
     function clonePoem() {
       document.querySelectorAll('.poem__list').forEach(function(list) {
@@ -352,34 +335,6 @@ body.is-playing .jacket__play:after {
         audio.play()
         body.classList.add(playingClass)
       }
-    })
-
-    playButton.addEventListener('mousedown', function(e) {
-      e.stopPropagation()
-    })
-
-    jacket.addEventListener('mouseenter', function(e) {
-      body.classList.add(grabClass)
-    })
-
-    jacket.addEventListener('mouseleave', function(e) {
-      body.classList.remove(grabClass)
-    })
-
-    jacket.addEventListener('mousedown', function(e) {
-      handleStart(e.clientX, e.clientY)
-      body.addEventListener('mousemove', mouseMoveHandler)
-      body.addEventListener('mouseup', mouseUpHandler)
-    })
-
-    jacket.addEventListener('touchstart', function(e) {
-      handleStart(e.changedTouches[0].clientX, e.changedTouches[0].clientY)
-      body.addEventListener('touchmove', touchMoveHandler)
-      body.addEventListener('touchend', touchEndHandler)
-    })
-
-    jacket.addEventListener('contextmenu', function(e) {
-      e.preventDefault()
     })
 
     clonePoem()
